--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
@@ -14,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
